# Kaoqin_Demo1

./: .coveragerc  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  1.html  1.txt  1.xlsx  2.xlsx  AGENTS.md  API_Contract_Verification_Report.md  API_SPECIFICATION.md  API_TEST_ENHANCEMENT_PLAN.md  CI_CD_Comprehensive_Verification_Report.md  CI_CD_ENHANCEMENT_COMPLETION_REPORT.md  CI_CD_Error_Analysis_Report.md  CI_CD_Fix_Summary.md  CI_CD_Migration_Fix_Report.md  CI_CD_PostgreSQL_Migration_Guide.md  CI_CD_Test_Analysis_Report.md  CLAUDE.md  CODECOV_INTEGRATION_SUMMARY.md  ENUM_FIX_REPORT.md  FIELD_MAPPING_FIXES_SUMMARY.md  LOG_FRONTED.TXT  PRE_COMMIT_SETUP.md  QUICK_DEPLOY_CHECKLIST.md  TEST_ANALYSIS_REPORT.md  TEST_EXECUTION_FIXES_SUMMARY.md  agents_updated.md  ai_recommendation_analysis.md  analyze_member_matching.py  api-requirements.md  check_members_table.py  check_migration_status.py  codecov.yml  comments.md  comprehensive_testing_audit_report.md  debug_import_matching.py  deploy_ready_check.sh  (+23 more)
backend/: .coveragerc  .env.ci  .env.example  .env.postgres  .env.sqlite  .env.test  .flake8  API_ENDPOINTS_SUMMARY.md  AUTHENTICATION_REPAIR_REPORT.md  BUSINESS_TEST_REPORT.md  CI_Database_Configuration_Fix_Summary.md  CI_Test_Coverage_Analysis_Report.md  COVERAGE_GUIDE.md  Dockerfile  MISSING_FEATURES.md  PROJECT_COMPLETION_SUMMARY.md  SQLALCHEMY_TYPE_FIXES_REPORT.md  TESTING.md  TYPE_FIXES_REPORT.md  ai_recommendation_engine.py  alembic.ini  analyze_coverage_fix.py  backend_log.txt  basic_test.py  ci_performance_validation.py  ci_pipeline_report.py  ci_pipeline_simulation.py  core_test.py  coverage.json  coverage_100_percent_report.json  coverage_analyzer.py  coverage_config.ini  coverage_optimization_plan.md  coverage_optimization_summary.py  create_postgres_admin.py  create_test_user.py  create_user_direct.py  data_integrity_check.py  debug_test.py  docker-compose.yml  (+69 more)
backend/alembic/: env.py
backend/alembic/versions/: 20250127_1500_001_initial_schema.py  20250750_0000_initial_tables_creation.py  20250801_0007_2fc5b4d5d552_add_daily_attendance_records_and_.py  20250804_2300_001_create_new_members_table.py  20250805_2010_6ae2481d55e9_make_student_id_optional.py  20250805_2016_48a1baba958a_add_profile_completed_field.py  20250808_0001_task_management_refactoring.py  20250809_1110_add_due_date_only.py  20250818_1308_36714b7138b8_fix_database_schema_to_match_current_.py  20250819_1903_8e5236d2ab84_initial_unified_migration.py  20250901_0001_8f982508d35c_add_assistance_task_approval_fields.py  20250901_0004_619f3900d258_add_offline_task_marking_fields_to_.py  20250901_0028_77468d69bee0_add_inspection_fields_to_monitoring_.py  20250901_0102_f8854d11d63a_add_system_config_model.py  20250915_1506_e47caaff7c57_add_assistance_task_type.py  20250916_0001_remove_attendance_tables.py  20250926_1028_d1402934c1fc_initial_migration_with_all_tables.py  20260408_1200_add_auth_refresh_token_table.py  20260408_1600_b3c4d5e6f7a8_add_app_user_user_profile_tables.py  20260409_2200_c4d5e6f7a8b9_align_docs_phase1_foundation_tables.py  20260409_2330_d5e6f7a8b9c0_align_docs_phase2_governance_workhour_core.py  20260410_0010_e6f7a8b9c0d1_align_docs_phase3_coop_tables.py  20260410_0200_f7a8b9c0d1e2_align_docs_phase4_inspection_tables.py  20260410_0330_08b9c0d1e2f3_align_docs_phase5_sampling_tables.py  20260410_0500_19c0d1e2f304_align_docs_phase6_repair_workhour_entry_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  celery_app.py  celery_tasks.py  config.py  database.py  database_compatibility.py  database_compatibility.py.backup  database_optimized.py  database_remote.py  exceptions.py  messages.py  messages.py.backup  (+6 more)
backend/docs/: BASELINE_DECISIONS.md  FULL_ITERATION_RUNBOOK_20260409.md  M4_RELEASE_REHEARSAL_20260409.md  V2_IMPLEMENTATION_DEVIATION_LIST.md
backend/scripts/: coverage_improvement_strategy.py  coverage_quality_gate.py  create_admin.py  fix_ci_issues.py  fix_mypy_errors.py  fix_test_data.py  full_iteration_gate.sh  generate_coverage.py  m4_readiness_gate.sh  maintenance_fixes.py  rebuild_database.sh  run_coverage_optimization.py  test_codecov_integration.py  test_with_coverage.py  type_check.py  validate_codecov.py
backend/tests/: async_helpers.py  conftest.py  database_config.py  enhanced_cicd_config.py  test_api_contract_validation.py  test_auth.py  test_auth_simple.py  test_basic.py  test_basic_workflow.py  test_comprehensive_business.py  test_database_compatibility.py  test_debug_fixtures.py  test_field_mapping_fixes.py  test_maintenance_import_assignee_matching.py
(+561 files in other folders)
